main.css
/* ... */
div .button.orange-button {
  color: white;
  background: rgb(253,217,51); /* Old browsers */
  background: -moz-linear-gradient(top, rgb(253,217,51) 0%, rgb(227,166,45) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(253,217,51)), color-stop(100%,rgb(227,166,45))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* IE10+ */
  background: linear-gradient(to bottom, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdd933', endColorstr='#e3a62d',GradientType=0 ); /* IE6-9 */
  border: 1px solid rgb(207, 156, 29);
}

.join * {
  height: 60px;
  line-height: 60px;
}


.reward {
  display: block;
  height: 79px;
  width: 288;
  margin: 0 auto;
  background-color: white;
  border-radius: 0px 0px 6px 6px;
  box-shadow: inset 0px -4px 0px -1px rgb(230, 230, 230);
  color: black;
  border: 1px solid rgb(177, 177, 177);
  position: relative;
  
}

.reward img {
  position: relative;
  width: 40px;
  height: 54px;
  float: left;
  margin: 8px;
  margin-top: 13px;
}

.reward .subtext {
  font-size: 13px;
  padding: 0px;
  margin-top: 0px;
  color: rgb(65, 65, 65);
}

.reward-text {
  padding-top: 16px;
  font-size: 18px;
  color: rgb(65, 65, 65);
}

.reward-text span {
  display: block;
  margin: 0px;
}

.feature-side > .subtext {
  height: 38px;
  font-size: 11px;
  line-height: 15px;
  text-align: center;
  border-bottom: 1px solid rgb(177, 177, 177);
}

.share-buttons {
  margin-top: 18px;
}

.share-buttons > * {
  display: inline-block;
  line-height: 24px;
}

.share-buttons .tweet {
  width: 55px;
  height: 24px;
}
.share-buttons .share {
  width: 57px;
  height: 24px;
}
.share-buttons .plusone {
  width: 38px;
  height: 24px;
}

.share-buttons .linkimg {
  width: 16px;
  height: 24px;
  display: inline-block;
  background: url("images/link.png") no-repeat center center;
}

.share-buttons a {
  margin-left: -3px;
}

.upcoming-thumbs {
  margin-top: 38px;
  height: 282px;
  border-bottom: 1px solid rgb(177, 177, 177)
}

.upcoming-thumb {
  width: 300px;
  margin-left: 15px;
}

div.upcoming-thumb.first {
  margin-left: 0px;
}

.upcoming-thumb > img {
  width: 300px;
  height: 194px;
}

.upcoming-thumb .timer {
  right: -4;
  font-size: 12px;
  margin-top: 5px;
}

.upcoming-thumb .timer img {
  position: relative;
}

.upcoming-thumb > .caption {
  position: relative;
  width: 298px;
  height: 54px;
}

.upcoming-thumb > .caption > .caption-text {
  margin: 5px 0 0 0;
  padding: 0px;
  width: 215px;
  letter-spacing: 0;
}

.upcoming-thumb .caption-text h3 {
  font-size: 15px;
  line-height: 115%;
  margin: 0px;
  color: rgb(0,0,0);
}

.upcoming-thumb .caption-text p {
  font-size: 12px;
  margin: 0px;
  color: rgb(120, 120, 120);
}

.upcoming-list {
  width: 620px;
  margin: 10px 0 10px;
  color: rgb(65, 65, 65);
}

div.last {
  border-bottom: none;
}

.upcoming-list > .header {
  font-size: 24px;
  margin-bottom: 20px;
}

.upcoming-list-row {
  border-bottom: 1px solid rgb(177, 177, 177);
  position: relative;
  height: 38px;
  line-height: 38px;
  text-align: center;
  font-size: 14px;
}

.upcoming-list-row .header {
  text-align: left;
  font-size: 17px;
  font-weight: 400;
}

.upcoming-list-row .mobber {

}

.upcoming-list-row .date {
  text-align: right;
  color: rgb(120, 120, 120);
}

.upcoming-list-row-data {
  width: 206px;
  float: left;
  letter-spacing: 0;
}

.start-mob {
  width: 301px;
  margin: 21px 0 21px 14px;
  background-color: rgb(208, 205, 199);
}

.start-mob .header {
  color: white;
  text-shadow: 0 1px rgb(145, 143, 139);
  margin-top: 15px;
  font-size: 25px;
  text-align: center;
}

.start-mob > img {
  width: 300px;
  height: 100px;
}

.start-mob * {
  margin: 0px auto;
}

.howtostartmob {
  position: relative;
  margin: 10px 10px;
  width: 279px;
}

.howtostartmob div.a-step {
  width: 78px;
  display: inline-block;
  margin-left: 17px;
  z-index: 10;
  position: relative;
}

div.a-step.first {
  margin-left: 0px;
}


div.how {
  margin-left: 0px;
}

.howtostartmob div.button {
  width: 39px;
  height: 39px;
  line-height: 37px;
  letter-spacing: 0px;
  display: block;
  border: 1px solid rgb(128, 126, 122);
  border-radius: 39px;
  font-size: 23px;
  text-align: center;
  color: rgb(120, 120, 120);
  text-shadow: 0 1px rgb(252, 252, 252);
  box-shadow:  inset 0  2px 2px -1px rgb(255, 255, 255),
               inset 0 -2px 2px -1px rgb(200, 200, 200),
                     0  2px 2px -1px rgb(175, 173, 168);

  background: rgb(200,200,200); /* Old browsers */
  background: -moz-linear-gradient(top, rgb(200,200,200) 0%, rgb(253,253,253) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(200,200,200)), color-stop(100%,rgb(253,253,253))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, rgb(200,200,200) 0%,rgb(253,253,253) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, rgb(200,200,200) 0%,rgb(253,253,253) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, rgb(200,200,200) 0%,rgb(253,253,253) 100%); /* IE10+ */
  background: linear-gradient(to bottom, rgb(200,200,200) 0%,rgb(253,253,253) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d5d5d5', endColorstr='#fdfdfd',GradientType=0 ); /* IE6-9 */

}

.howtostartmob p {
  width: 78px;
  color: rgb(65, 65, 65);
  font-size: 12px;
  text-align: center;
}

.howtostartmob .bar {
  width: 200px;
  height: 7px;
  background-color: rgb(189, 187, 187);
  display: block;
  position: absolute;
  top: 17px;
  left: 40px;
  z-index: 5;
}
/* ... */

